tests/spec/emit/snapshots/err_with_errors_new.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:errors"
  
  fn might_fail(n: int) -> Result<int, error> {
    if n < 0 {
      return Err(errors.New("negative"))
    }
    Ok(n)
  }
---
package main

import "errors"

func mightFail(n int) (int, error) {
	if n < 0 {
		return 0, errors.New("negative")
	}
	return n, nil
}
