tests/spec/emit/snapshots/errors_new_string_only_format_string_stays_errors_new.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:errors"
  
  fn fail(path: string) -> error {
    errors.New(f"cannot open {path}")
  }
  
  fn main() {
    let _ = fail("x")
  }
---
package main

import "errors"

func fail(path string) error {
	return errors.New("cannot open " + path)
}

func main() {
	fail("x")
}
