tests/spec/emit/snapshots/escaped_backslash_before_octal_digits.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\\033"
  }
---
package main

func test() string {
	return "\\033"
}
