tests/spec/emit/snapshots/escaped_backslash_before_unicode_escape.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\\u{0041}"
  }
---
package main

func test() string {
	return "\\u{0041}"
}
