tests/spec/emit/snapshots/eval_order_assignment_index_target_if_value.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut items = [10, 20]
    let mut i = 0
    items[i] = if true { i = 1; 9 } else { 0 }
    let _ = items
  }
---
package main

func main() {
	items := []int{10, 20}
	i := 0
	base := items
	idx := i
	var tmp int
	if true {
		i = 1
		tmp = 9
	} else {
		tmp = 0
	}
	base[idx] = tmp
	_ = items
}
