tests/spec/emit/snapshots/eval_order_no_hoist_when_no_temps.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn a() -> int { 1 }
  fn b() -> int { 2 }
  
  fn main() {
    let x = a() + b()
  }
---
package main

func a() int {
	return 1
}

func b() int {
	return 2
}

func main() {
	_ = a() + b()
}
